C++11定义信号类 	普通的wait，仅仅等待一个异步消息。

--- a/CPPUtils.vcxproj
+++ b/CPPUtils.vcxproj
@@ -124,6 +124,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="sem.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="sem.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
