这是一个线程安全的类，基于控制台的进度条实现(idea by 我脸上有bug https://zhuanlan.zhihu.com/p/113666996，同时还使用了termcolor，https://termcolor.readthedocs.io/) 有以下问题：     1.不能完全清楚行内容。     2.控制台鼠标一点击就终止了。

--- a/CPPUtils.vcxproj
+++ b/CPPUtils.vcxproj
@@ -124,10 +124,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="sem.cpp" />
+    <ClCompile Include="progressbar.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sem.h" />
+    <ClInclude Include="progressbar.h" />
+    <ClInclude Include="termcolor.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
