--- a/CPPUtils.vcxproj.filters
+++ b/CPPUtils.vcxproj.filters
@@ -18,12 +18,15 @@
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="sem.cpp">
+    <ClCompile Include="progressbar.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="sem.h">
+    <ClInclude Include="progressbar.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="termcolor.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
