--- a/CPPUtils.vcxproj.filters
+++ b/CPPUtils.vcxproj.filters
@@ -29,5 +29,8 @@
     <ClInclude Include="termcolor.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="multiprogressbar.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
