线程池的使用，有很多问题需要分析。不要用这个版本。

--- a/CPPUtils.vcxproj
+++ b/CPPUtils.vcxproj
@@ -125,11 +125,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
     <ClCompile Include="progressbar.cpp" />
+    <ClCompile Include="threadpool.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="multiprogressbar.hpp" />
     <ClInclude Include="progressbar.h" />
     <ClInclude Include="termcolor.hpp" />
+    <ClInclude Include="threadpool.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
