--- a/CPPUtils.vcxproj.filters
+++ b/CPPUtils.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="progressbar.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="threadpool.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="progressbar.h">
@@ -30,6 +33,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="multiprogressbar.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="threadpool.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
