--- a/CPPUtils.vcxproj.filters
+++ b/CPPUtils.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="threadpool.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="sem.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="progressbar.h">
@@ -36,6 +39,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="threadpool.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="sem.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
