简单工厂模式 特点：         1.需要在工厂类中进行判断，从而创造产品，当增加新产品时需要修改工厂类。 缺点：         1.工厂类中集中了所有产品类的创建逻辑，如果产品量大就会使得工厂类变得臃肿。

--- a/CPPUtils.vcxproj.filters
+++ b/CPPUtils.vcxproj.filters
@@ -13,10 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="工厂模式">
+      <UniqueIdentifier>{e94582ee-3f80-479d-9028-36d96c33343a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="工厂模式\简单工厂模式">
+      <UniqueIdentifier>{5d7817ed-0209-4f75-8781-b72c707ee6f0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="simplefactory.hpp">
+      <Filter>工厂模式\简单工厂模式</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
