工厂方法模式       特点：       1.定义一个创建对象的接口，其子类去实现这个接口以完成具体的创建工作。如果需要增加新的产品类，只需扩展一个相应的工厂类即可。      缺点：     1.产品类型很多时，就会需要大量的产品工厂类。

--- a/CPPUtils.vcxproj
+++ b/CPPUtils.vcxproj
@@ -126,6 +126,7 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="factorymethod.hpp" />
     <ClInclude Include="simplefactory.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
