--- a/CPPUtils.vcxproj.filters
+++ b/CPPUtils.vcxproj.filters
@@ -44,5 +44,8 @@
     <ClInclude Include="sem.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="async.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
